proyectos/wordpress/deployment/wordpress.deployment.yaml
## BBDD - Mariadb
### Statefulset
#### Plantilla de POD
#### Plantilla de PVC

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bbdd
spec:
    replicas: 1
    selector:
        matchLabels:
            app:  bbdd
    serviceName: bbdd # En dns generar entradas para cada instancia del statefulset
                      # bbdd-0.bbdd
    template:
        metadata:
            name: bbdd
            labels:  
              app:  bbdd
        spec:
            serviceAccountName:     wp-ivan
            containers:
                - name:             bbdd
                  image:            mariadb:latest
                  imagePullPolicy:  IfNotPresent
                  resources:
                    requests:
                        memory:     512Mi
                        cpu:        1
                    limits:
                        memory:     512Mi
                        cpu:        2
                  volumeMounts:
                    - name:         pvc-bbdd-template
                      mountPath:    /var/lib/mysql
    volumeClaimTemplates:
        -   metadata:
              name: pvc-bbdd-template
            spec:
                # storageClass: # Si no lo pongo, se me entregará un volumen generado por el provisionador por defecto
                resources:
                    requests:
                        storage: 1Gi
                accessModes:
                    - ReadWriteOnce # Para mi

    
---
## Servicio ClusterIP para la BBDD (BALANCEO y un nombre fqdn)
kind:       Service
apiVersion: v1
metadata:
    name:   bbdd # Nombre fqdn para cceder a la IP de balanceo que se creará
spec:
    type:   ClusterIP # Es el por defecto... no me haría falta ponerlo
    ports:  
        - port: 3306 # En la IP de balanceo
          targetPort: 3306 # Del contenedor que hay detrás
    selector:
          app:  bbdd # Los pods que haya con esta etiqueta (TODOS LOS CREADOS DESDE MI PLANTILLA, donde tengo definida esa etiqueta)
                     # Sirven para dar este servicio (son el backend del servicio)
---
## Apache - PHP + WORDPRESS
### Deployment
#### Plantilla de POD

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
spec:
    replicas: 2
    selector:
        matchLabels:
            app:  wp-12892891236781
    template:
        metadata:
            name: wp
            labels:  
                app:  wp-12892891236781
        spec:
#            affinity:
#                podAntiAffinity:
#                  requiredDuringSchedulingIgnoredDuringExecution:
#                  - labelSelector:
#                      matchExpressions:
#                      - key: app
#                        operator: In
#                        values:
#                        - wp-12892891236781
#                    topologyKey: topology.kubernetes.io/zone
            serviceAccountName:     wp-ivan
            containers:
                - name:             wp
                  image:            wordpress:latest
                  imagePullPolicy:  IfNotPresent
                  resources:
                    requests:
                        memory:     512Mi
                        cpu:        100m
                    limits:
                        memory:     512Mi
                        cpu:        500m                  
                  volumeMounts:
                    - name:         almacenamiento-wp
                      mountPath:    /var/www/html
            volumes:      
                - name:             almacenamiento-wp
                  persistentVolumeClaim:
                    claimName:      pvc-wp


---

## Servicio ClusterIP para el Wordpress

## Servicio ClusterIP para la BBDD (BALANCEO y un nombre fqdn)
kind:       Service
apiVersion: v1
metadata:
    name:   wp # Nombre fqdn para cceder a la IP de balanceo que se creará
spec:
    type:   ClusterIP # Es el por defecto... no me haría falta ponerlo
    ports:  
        - port: 80 # En la IP de balanceo
          targetPort: 80 # Del contenedor que hay detrás
    selector:
          app:  wp-12892891236781 # Los pods que haya con esta etiqueta (TODOS LOS CREADOS DESDE MI PLANTILLA, donde tengo definida esa etiqueta)
                     # Sirven para dar este servicio (son el backend del servicio)
---

## Ingress -> Route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wp
spec:
  to:
    kind: Service
    name: wp
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---
## NetworkPolicy
## - Proteger la BBDD: Wordpress + Adminer

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bbdd-wp
spec:
  podSelector:
    matchLabels:
      app: bbdd
  ingress:
    - ports:
        - protocol: TCP
          port: 3306
      from:
        - podSelector:
            matchLabels:
              app: wp
  policyTypes:
    - Ingress
